<resources>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="point_of_view">Point of View</string>
    <string name="dual">Dual</string>
    <string name="new_game">New Game</string>
    <string name="control">Control :</string>
    <string name="sound">Sound :</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="welcome_to_snake_game">WELCOME TO SNAKE GAME</string>
</resources>
